[gd_scene load_steps=22 format=3 uid="uid://7mgerihp2npk"]

[ext_resource type="Script" uid="uid://74ge1mkoyu37" path="res://Scenes/Space/Space Generation/Planet/Planet.cs" id="1_svryr"]
[ext_resource type="Script" uid="uid://dyga1ky6bp65u" path="res://Scenes/Space/Space Generation/Planet/PlanetMeshFace.cs" id="2_3l861"]
[ext_resource type="FastNoiseLite" uid="uid://o3u5qhnij643" path="res://Scenes/Space/Space Generation/Planet/Planet_1/planet_1_noise.tres" id="3_065n6"]
[ext_resource type="FastNoiseLite" uid="uid://dhdnf1dhqpook" path="res://Scenes/Space/Space Generation/Planet/Planet_1/planet_1_noise_2.tres" id="3_67ncy"]
[ext_resource type="Material" uid="uid://ce68ous2miebp" path="res://Scenes/Space/Space Generation/Planet/materials/Planet_1_material.tres" id="3_svryr"]
[ext_resource type="Script" uid="uid://bj7pgr1cb1yta" path="res://Scenes/Space/Space Generation/Planet/areas.gd" id="5_80y83"]

[sub_resource type="SphereShape3D" id="SphereShape3D_svryr"]
radius = 8.0

[sub_resource type="Gradient" id="Gradient_80y83"]
offsets = PackedFloat32Array(0.0456853, 0.304569, 0.593909, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0.254902)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_67ncy"]
gradient = SubResource("Gradient_80y83")

[sub_resource type="Curve" id="Curve_svryr"]
_data = [Vector2(0.0672646, 0.179775), 0.0, 0.0, 0, 0, Vector2(0.789238, 0.606742), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_80y83"]
curve = SubResource("Curve_svryr")

[sub_resource type="Gradient" id="Gradient_oamuy"]
offsets = PackedFloat32Array(0, 0.187817, 0.553299, 0.786802, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_065n6"]
gradient = SubResource("Gradient_oamuy")

[sub_resource type="Curve" id="Curve_80y83"]
_limits = [0.0, 1.0, 0.0, 0.816144]
_data = [Vector2(0.0986547, 0.0674158), 0.0, 0.0, 0, 0, Vector2(0.816144, 0.977528), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_67ncy"]
curve = SubResource("Curve_80y83")

[sub_resource type="Gradient" id="Gradient_svryr"]
offsets = PackedFloat32Array(0, 0.426396, 0.527919, 0.664975, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0.860215, 0.860215, 0.860215, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_80y83"]
gradient = SubResource("Gradient_svryr")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_svryr"]
transparency = 1
blend_mode = 4
cull_mode = 2
depth_draw_mode = 2
albedo_texture = SubResource("GradientTexture1D_67ncy")
metallic = 0.28
metallic_specular = 0.22
metallic_texture = SubResource("GradientTexture1D_065n6")
metallic_texture_channel = 2
roughness = 0.5
roughness_texture = SubResource("GradientTexture1D_80y83")
emission_enabled = true
emission = Color(0.640187, 0.75124, 1, 1)
emission_energy_multiplier = 0.4
clearcoat = 0.5
anisotropy = 0.46
ao_light_affect = 0.17
ao_texture_channel = 2
heightmap_scale = 3.222
heightmap_deep_parallax = true
heightmap_min_layers = 8
heightmap_max_layers = 32
subsurf_scatter_strength = 0.4
subsurf_scatter_skin_mode = true
backlight = Color(0.0588235, 0.792157, 0.909804, 1)
backlight_texture = SubResource("CurveTexture_80y83")
refraction_scale = -0.33
refraction_texture = SubResource("CurveTexture_67ncy")
refraction_texture_channel = 2
uv1_triplanar_sharpness = 4.92458
texture_repeat = false
shadow_to_opacity = true
distance_fade_min_distance = 1430.35
distance_fade_max_distance = 4096.0

[sub_resource type="SphereMesh" id="SphereMesh_80y83"]
material = SubResource("StandardMaterial3D_svryr")
radius = 5.0
height = 10.0

[sub_resource type="SphereShape3D" id="SphereShape3D_80y83"]
radius = 15.0

[sub_resource type="SphereShape3D" id="SphereShape3D_67ncy"]
radius = 30.0

[node name="Planet" type="Node3D"]
transform = Transform3D(-0.411798, 0, 0.911617, 0, 1, 0, -0.911617, 0, -0.411798, 0, 0, 0)
script = ExtResource("1_svryr")
Noises = Array[FastNoiseLite]([ExtResource("3_065n6"), ExtResource("3_67ncy")])
Material = ExtResource("3_svryr")
Radius = 6.0

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 7
collision_mask = 7
gravity_point = true
gravity_point_unit_distance = 1024.0
gravity = 32.0
wind_force_magnitude = 2.537
wind_attenuation_factor = 0.134

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_svryr")

[node name="Up" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, 0.0283422, -0.0245771, 0.00641491)
script = ExtResource("2_3l861")
Material = ExtResource("3_svryr")

[node name="Down" type="MeshInstance3D" parent="."]
script = ExtResource("2_3l861")
Material = ExtResource("3_svryr")

[node name="Left" type="MeshInstance3D" parent="."]
script = ExtResource("2_3l861")
Material = ExtResource("3_svryr")

[node name="Right" type="MeshInstance3D" parent="."]
script = ExtResource("2_3l861")
Material = ExtResource("3_svryr")

[node name="Front" type="MeshInstance3D" parent="."]
layers = 3
gi_mode = 2
script = ExtResource("2_3l861")
Material = ExtResource("3_svryr")

[node name="Back" type="MeshInstance3D" parent="."]
script = ExtResource("2_3l861")
Material = ExtResource("3_svryr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
gi_mode = 0
gi_lightmap_texel_scale = 10.0
mesh = SubResource("SphereMesh_80y83")

[node name="Areas" type="Node3D" parent="." node_paths=PackedStringArray("area_3d")]
script = ExtResource("5_80y83")
area_3d = NodePath("../Area3D")

[node name="CloseArea" type="Area3D" parent="Areas"]
collision_layer = 7
collision_mask = 7
gravity_point = true
gravity_point_unit_distance = 1024.0
gravity = 32.0
wind_force_magnitude = 2.537
wind_attenuation_factor = 0.134

[node name="CloseSphere" type="CollisionShape3D" parent="Areas/CloseArea"]
shape = SubResource("SphereShape3D_svryr")

[node name="MidArea" type="Area3D" parent="Areas"]

[node name="MidSphere" type="CollisionShape3D" parent="Areas/MidArea"]
shape = SubResource("SphereShape3D_80y83")

[node name="FarArea" type="Area3D" parent="Areas"]

[node name="FarSphere" type="CollisionShape3D" parent="Areas/FarArea"]
shape = SubResource("SphereShape3D_67ncy")

[connection signal="body_entered" from="Area3D" to="Areas" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="Areas" method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="Areas/CloseArea" to="Areas" method="_on_close_area_body_entered"]
[connection signal="body_exited" from="Areas/CloseArea" to="Areas" method="_on_close_area_body_exited"]
[connection signal="body_entered" from="Areas/MidArea" to="Areas" method="_on_mid_area_body_entered"]
[connection signal="body_exited" from="Areas/MidArea" to="Areas" method="_on_mid_area_body_exited"]
[connection signal="body_entered" from="Areas/FarArea" to="Areas" method="_on_far_area_body_entered"]
[connection signal="body_exited" from="Areas/FarArea" to="Areas" method="_on_far_area_body_exited"]
